--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">FossilSOFChallenge</string>
+    <string name="double_to_exit">Press Back again to exit!</string>
 </resources>
