--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="double_to_exit">Press Back again to exit!</string>
 
     <string name="home_title">Home</string>
+    <string name="retry_title">RETRY</string>
 
     <string name="tab_user">USERS</string>
     <string name="tab_user_bookmarked">BOOKMARKS</string>
